Added book detail to api.

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,5 @@
 body
-  font 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font 14px "PT Serif Caption", Helvetica, Arial, sans-serif
   margin 0
 a
   color #00B7FF
