--- a/views/index.html
+++ b/views/index.html
@@ -6,10 +6,11 @@
         <script src="/js/controllers.js"></script>
         <script src="/js/dirPagination.js"></script>
 	<script src="/js/app.js"></script>
-        <link href="/css/style.css" rel="stylesheet">
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <script href="/css/ui-bootstrap.min.js"></script>
         <script href="/css/ui-bootstrap.min.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
+        <link href="/css/style.css" rel="stylesheet">
 </head>
 <body ng-app="BookCatalog">
 <div class="header">
