--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,6 +1,15 @@
+pre
+  clear both
+
+border-radius()
+  -webkit-border-radius arguments
+  -moz-border-radius arguments
+  border-radius arguments
+
 body
   font 14px "PT Serif Caption", Helvetica, Arial, sans-serif
   margin 0
+  background-color #dcccb1
 a
   color #00B7FF
 dt 
@@ -10,40 +19,66 @@ dd
   display inline
   margin-left 0
 
+section
+  width 100%
+  padding 2.5%
 .header
   width 100%
   padding .5em 1em
-  background-color cornflowerblue
+  background-color #770719
+  color white
+.header img
+  display inline-block
+.nav
+  display inline-block
+.nav li
+  display inline-block
+  list-style none
+  margin 0 2em
+  font-size 1.5em
+.nav a, .nav a:hover
+  color white
 .content
-  padding 30px
-.mainContent
   display inline-block
-  margin 30px
-  width 70%
-.sidebar
-  display inline-block
-  vertical-align top
-  width 20%
-  background-color lightsteelblue
+  width 100%
   padding .5em
+  background-color white
+  border-radius(10px)
+.sidebar
+  float left
+  vertical-align top
+  width 200px
+  max-width 100%
+  background-color white
+  padding .5em
+  border-radius(10px)
+  margin 2.5%
 .pagination
   list-style  none
 .pagination li
   display inline-block
   background-color azure
 .pagination a, .pagination a:hover
-  position: relative;
-  float: left;
-  padding: 6px 12px;
-  line-height: 1.42857143;
-  text-decoration: none;
-  color: #428bca;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  margin-left: -1px;
+  position: relative
+  float: left
+  padding: 6px 12px
+  line-height: 1.42857143
+  text-decoration: none
+  color: #428bca
+  background-color: #fff
+  border: 1px solid #ddd
+  margin-left: -1px
 
-
-
-
-
-
+form.addBook
+  float left
+  padding .5em
+  width 500px
+  max-width 100%
+select, input, button
+  margin .5em
+.preview h2
+  font-size: 2rem
+.preview h3
+  font-size: 1.5rem
+.preview ul
+  list-style none
