--- a/views/index.html
+++ b/views/index.html
@@ -1,21 +1,25 @@
 <html>
 <head>
-	<base href="/">
-        <script src="/js/angular/angular.js"></script>
-        <script src="/js/angular-route/angular-route.js"></script>
-        <script src="/js/controllers.js"></script>
-        <script src="/js/dirPagination.js"></script>
-	<script src="/js/app.js"></script>
-        <link href="/css/bootstrap.min.css" rel="stylesheet">
-        <script href="/css/ui-bootstrap.min.js"></script>
-        <script href="/css/ui-bootstrap.min.js"></script>
-	<link href='http://fonts.googleapis.com/css?family=PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
-        <link href="/css/style.css" rel="stylesheet">
+  <base href="/">      
+  <script src="/js/bcrypt/bcrypt.min.js"></script>
+  <script src="/js/angular/angular.js"></script>
+  <script src="/js/angular-route/angular-route.js"></script>
+  <script src="/js/controllers.js"></script>
+  <script src="/js/dirPagination.js"></script>
+  <script src="/js/app.js"></script>
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <script href="/css/ui-bootstrap.min.js"></script>
+  <script href="/css/ui-bootstrap.min.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
+  <link href="/css/style.css" rel="stylesheet">
 </head>
 <body ng-app="BookCatalog">
 <div class="header">
-<h1>This is the header for the Cedar Fort database.</h1>
+  <a href="http://cedarfortbooks.com/"><img src="/img/cflogo.png"></a>
+  <div class="nav" ng-include="'/tpl/nav.html'"></div>
 </div>
-<div ng-view></div>
+<section>
+  <div class="content" ng-view></div>
+</section>
 </body>
 </html>
