Continued work on contributors.

--- a/public/lib/css/style.styl
+++ b/public/lib/css/style.styl
@@ -6,6 +6,9 @@ border-radius()
   -moz-border-radius arguments
   border-radius arguments
 
+.error
+  color red
+
 body
   font 14px "PT Serif Caption", Helvetica, Arial, sans-serif
   margin 0
@@ -82,3 +85,29 @@ select, input, button
   font-size: 1.5rem
 .preview ul
   list-style none
+form li
+  display inline-block
+  text-align right
+  list-style none
+  border-left #770719 2px solid
+  padding-left 0.5em
+  margin-top 1em
+#pricingInfo .error
+  max-width: 20em; 
+
+.ng-modal
+  position fixed
+  background white
+  color black
+  padding 1em
+  border-radius 1em
+  border-style solid
+  width 20%
+  min-width 20em
+  left 0
+  right 0
+  margin auto
+.ng-modal h2
+  margin-top 0
+.ng-modal span.ng-modal-close-x
+  display none
