--- a/views/templates/bookDetail.html
+++ b/views/templates/bookDetail.html
@@ -11,3 +11,8 @@
 		</li>
 	</ul>
 </div>
+<button ng-click="validateTitle()">Validate</button>
+<button ng-click="deleteTitle()">Delete</button>
+<button ng-click="editTitle()">Edit</button>
+<pre>{{title | json}}</pre>
+<pre>{{errors | json}}</pre>
