--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -1,6 +1,9 @@
 pre {
   clear: both;
 }
+.error {
+  color: #f00;
+}
 body {
   font: 14px "PT Serif Caption", Helvetica, Arial, sans-serif;
   margin: 0;
@@ -102,4 +105,36 @@ button {
 }
 .preview ul {
   list-style: none;
+}
+form li {
+  display: inline-block;
+  text-align: right;
+  list-style: none;
+  border-left: #770719 2px solid;
+  padding-left: 0.5em;
+  margin-top: 1em;
+}
+#pricingInfo .error {
+  max-width: 20em;
+}
+.ng-modal {
+  position: fixed;
+  background: #fff;
+  color: #000;
+  padding: 1em;
+  -webkit-border-radius: 1em;
+  -moz-border-radius: 1em;
+  border-radius: 1em;
+  border-style: solid;
+  width: 20%;
+  min-width: 20em;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.ng-modal h2 {
+  margin-top: 0;
+}
+.ng-modal span.ng-modal-close-x {
+  display: none;
 }
